# chui

./: LICENSE  README.md  demo.py  pyproject.toml
chui/: __init__.py  __main__.py  cli.py  config.py  protocols.py  ui.py
chui/commands/: __init__.py  base.py  pipeline.py  registry.py
chui/core/: __init__.py  cli_utils.py  create_plugin.py  errors.py
chui/events/: __init__.py  base.py  types.py
chui/plugins/: __init__.py  base.py  discovery.py  registry.py
chui/ui/: __init__.py  capabilities.py  core.py  formatters.py  pagination.py
chui/ui/components/: __init__.py  forms.py  selector.py
chui/ui/displays/: __init__.py  panels.py  tables.py
chui/utilities/: __init__.py  aliases.py  system.py  validators.py
plugins/: __init__.py
plugins/playground/: __init__.py  commands.py  plugin.py
