[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chui"
version = "0.1.1"
description = "Chui - CLI Hub & UI Interface Framework"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "James Bressler", email = "coloradocomputerpro@incognito.tech"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=12.0.0",
    "cmd2>=2.4.2",
    "pyyaml>=6.0",
    "cryptography>=38.0.0"
]

[project.scripts]
chui = "chui.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chui*"]
namespaces = false